compiler/test/integration/duplicate_stmts.err
TypeError in [test/integration/duplicate_stmts.brm:2.4-2.8]: Duplicate binding for foo
