compiler/test/integration/duplicate_stmts.brm
val foo = 1
val foo = 2

